Initial project setup with monorepo structure
- Created monorepo structure with pnpm workspaces
- Set up frontend (Next.js), backend (Express), admin (React Admin)
- Configured shared packages (shared types, coupons system)
- Set up Prisma with SQLite database
- Configured ESLint, Prettier, and Husky
- Created comprehensive documentation and README

--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "ecommerce-platform",
   "private": true,
-  "workspaces": ["apps/*", "packages/*"],
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ],
   "scripts": {
     "dev:frontend": "pnpm --filter frontend dev",
     "dev:backend": "pnpm --filter backend dev",
