--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -4,14 +4,14 @@
   "description": "E-commerce platform backend API",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "tsx watch src/index.ts",
+    "dev": "nodemon --exec ts-node src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
     "db:studio": "prisma studio",
-    "lint": "eslint src/**/*.ts",
+    "lint": "eslint src/index.ts",
     "test": "jest"
   },
   "dependencies": {
@@ -33,7 +33,8 @@
     "@types/jsonwebtoken": "^9.0.0",
     "@types/node": "^20.0.0",
     "prisma": "^5.0.0",
-    "tsx": "^4.0.0",
+    "ts-node": "^10.9.0",
+    "nodemon": "^3.0.0",
     "typescript": "^5.0.0",
     "jest": "^29.0.0",
     "@types/jest": "^29.0.0"
