--- a/apps/frontend/.eslintrc.json
+++ b/apps/frontend/.eslintrc.json
@@ -1,7 +1,6 @@
 {
-  "extends": ["next/core-web-vitals", "../../eslint.config.js"],
+  "extends": ["next/core-web-vitals"],
   "rules": {
-    "@typescript-eslint/no-unused-vars": "error",
-    "@typescript-eslint/no-explicit-any": "warn"
+    "react/react-in-jsx-scope": "off"
   }
 }
