--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -23,7 +23,8 @@
     "@prisma/client": "^5.0.0",
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.0",
-    "zod": "^3.22.0"
+    "zod": "^3.22.0",
+    "express-rate-limit": "^7.1.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.0",
@@ -37,6 +38,9 @@
     "nodemon": "^3.0.0",
     "typescript": "^5.0.0",
     "jest": "^29.0.0",
-    "@types/jest": "^29.0.0"
+    "@types/jest": "^29.0.0",
+    "ts-jest": "^29.1.0",
+    "supertest": "^6.3.0",
+    "@types/supertest": "^6.0.0"
   }
 }
