--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -9,11 +9,14 @@
     "lint": "echo 'Lint check passed for admin'"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-admin": "^4.16.0",
+    "@ant-design/icons": "^6.0.0",
+    "antd": "^5.25.3",
+    "axios": "^1.6.0",
+    "dayjs": "^1.11.13",
     "ra-data-json-server": "^4.16.0",
-    "axios": "^1.6.0"
+    "react": "^18.2.0",
+    "react-admin": "^4.16.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.0",
