feat: 实现完整的电商前端功能
✨ 新增功能:
- 商品浏览和搜索功能
- 购物车管理系统
- 优惠券选择和应用
- 订单创建和管理
- 用户认证状态管理

🎨 UI/UX:
- 基于 Ant Design 的现代化界面
- 响应式设计，支持移动端
- 中文本地化界面
- 优雅的加载和错误处理

🔧 技术实现:
- Next.js 14 App Router 架构
- TypeScript 类型安全
- Zustand 状态管理
- Axios API 客户端
- 与后端 API 完全集成

📦 组件架构:
- ProductList: 商品列表展示
- Cart: 购物车管理
- CouponSelector: 优惠券选择器
- OrderSummary: 订单摘要

🔗 API 集成:
- 产品服务 (productService)
- 认证服务 (authService)
- 购物车服务 (cartService)
- 优惠券服务 (couponService)
- 订单服务 (orderService)

📱 页面实现:
- 首页: 商品展示和搜索
- 购物车页: 购物车管理
- 结算页: 订单信息填写

🎯 状态管理:
- useAuth: 用户认证状态
- useCart: 购物车状态
- useCoupons: 优惠券管理
- useProducts: 商品数据管理

✅ 构建成功，开发服务器正常运行

--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -13,7 +13,10 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "antd": "^5.0.0",
-    "axios": "^1.0.0"
+    "axios": "^1.0.0",
+    "zustand": "^4.4.0",
+    "shared": "workspace:*",
+    "coupons": "workspace:*"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
