--- a/.gitignore
+++ b/.gitignore
@@ -144,6 +144,11 @@ build/
 dist/
 *.tsbuildinfo
 
+# Source maps
+*.map
+*.js.map
+*.d.ts.map
+
 # Prisma
 prisma/migrations/
 !prisma/migrations/.gitkeep
