--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -15,32 +15,32 @@
     "test": "jest"
   },
   "dependencies": {
-    "express": "^4.18.0",
-    "cors": "^2.8.5",
-    "helmet": "^7.0.0",
-    "morgan": "^1.10.0",
-    "dotenv": "^16.0.0",
     "@prisma/client": "^5.0.0",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
+    "express": "^4.18.0",
+    "express-rate-limit": "^7.1.0",
+    "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.0",
-    "zod": "^3.22.0",
-    "express-rate-limit": "^7.1.0"
+    "morgan": "^1.10.0",
+    "zod": "^3.22.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.0",
-    "@types/cors": "^2.8.0",
-    "@types/morgan": "^1.9.0",
     "@types/bcryptjs": "^2.4.0",
-    "@types/jsonwebtoken": "^9.0.0",
-    "@types/node": "^20.0.0",
-    "prisma": "^5.0.0",
-    "ts-node": "^10.9.0",
-    "nodemon": "^3.0.0",
-    "typescript": "^5.0.0",
-    "jest": "^29.0.0",
+    "@types/cors": "^2.8.0",
+    "@types/express": "^4.17.0",
     "@types/jest": "^29.0.0",
+    "@types/jsonwebtoken": "^9.0.0",
+    "@types/morgan": "^1.9.0",
+    "@types/node": "^20.0.0",
+    "@types/supertest": "^6.0.3",
+    "jest": "^29.0.0",
+    "nodemon": "^3.0.0",
+    "prisma": "^5.0.0",
+    "supertest": "^6.3.4",
     "ts-jest": "^29.1.0",
-    "supertest": "^6.3.0",
-    "@types/supertest": "^6.0.0"
+    "ts-node": "^10.9.0",
+    "typescript": "^5.0.0"
   }
 }
