--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -11,13 +11,18 @@
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
     "db:studio": "prisma studio",
+    "db:seed": "ts-node prisma/seed.ts",
     "lint": "echo 'Lint check passed for backend'",
     "test": "jest"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
     "@prisma/client": "^5.0.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "coupons": "workspace:*",
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
     "express-rate-limit": "^7.1.0",
