--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -16,7 +16,8 @@
     "ra-data-json-server": "^4.16.0",
     "react": "^18.2.0",
     "react-admin": "^4.16.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-error-boundary": "^6.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.0",
